# qtrader

./: .gitignore  README.md  pyproject.toml
cli/: __main__.py
docs/: design_principles.md  naming_convention.md  order_management.md  quickstart.md
q/: qtrader.q
src/qtrader/brokers/ibkr/: README.me
src/qtrader/cli/: __main__.py
src/qtrader/config/: loader.py  merge.py  templating.py
src/qtrader/providers/massive/: README.md  normalize.py  stream.py  utils.py
src/qtrader/providers/massive/historical/: downloader.py  ingest.py  rest.py
src/qtrader/providers/massive/realtime/: feed.q  stream.py  test.py  websocket.py
src/qtrader/providers/massive/tests/: test_historical.py  test_realtime.py
src/qtrader/providers/massive_test/realtime/: stream.py
src/qtrader/providers/massiveapi/: README.md  massive.q  normalize.py
src/qtrader/providers/massiveapi/historical/: downloader.py  ingest.py
src/qtrader/providers/massiveapi/realtime/: stream.py  websocket.py
src/qtrader/providers/massiveapi/tests/: test_historical.py  test_realtime.py
src/qtrader/providers/yahoo/: yahoo.q
src/qtrader/runtime/: launcher.py  process_plan.py
stacks/equities.us1/: base.json  base.yaml  env.dev.json  env.dev.yaml
